@@ -157,7 +157,7 @@ struct workspace
 
   // the "options map" is another administrative file, stored in
   // _MTN/options. it keeps a list of name/value pairs which are considered
-  // "persistent options", associated with a particular the workspace and
+  // "persistent options", associated with a particular workspace and
   // implied unless overridden on the command line. the set of valid keys
   // corresponds exactly to the argument list of these functions.
 
